tests/paczka1/small_fuzzy/74539264.err
Error in line 1: WUAP3GJxz A982 55,9
Error in line 9: WUAP3GJxz S746 11,7
